[tool.poetry]
name = "nonebot-plugin-nezha"
version = "0.5.1"
description = "nonebot哪吒监控插件，使用哪吒监控API。"
authors = ["eya46 <61458340+eya46@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "nonebot_plugin_nezha" }]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = { version = ">=2.3.0", extras = ["httpx"] }
nonebot-plugin-alconna = ">=0.52.2"
jsonpath = "^0.82.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 121
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = ["E402"]